k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dev-team-sp25
  labels:
    app: dev-team-sp25
spec:
  replicas: 1
  revisionHistoryLimit: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 50%
  selector:
    matchLabels:
      app: dev-team-sp25
  template:
    metadata:
      labels:
        app: dev-team-sp25
    spec:
      restartPolicy: Always
      containers:
        - name: dev-team-sp25
          image: dev.techatnyu.org:5000/dev-team-sp25:1.0
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
              protocol: TCP
          readinessProbe:
            httpGet:
              path: /api/health
              port: 8080
          resources:
            limits:
              cpu: "0.50"
              memory: "128Mi"
            requests:
              cpu: "0.25"
              memory: "64Mi"
