k8s/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dev-team-sp25
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: dev-team-sp25
            port:
              number: 8080
      # - path: /tekton(/|$)(.*)
      #   pathType: ImplementationSpecific
      #   backend:
      #     service:
      #       name: tekton-dashboard
      #       port:
      #         number: 9097
      - path: /webhook
        pathType: ImplementationSpecific
        backend:
          service:
            name: el-cd-listener
            port:
              number: 8080
